<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >



    <ImageView
        android:id="@+id/image1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:adjustViewBounds="true"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/paddingBottomImage"
        android:scaleType="centerCrop"
        android:src="@drawable/coffeehouse" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/image1"
        android:fontFamily="@string/fontFamily"
        android:layout_marginTop="@dimen/marginTopTextView1"
        android:text="@string/lucy"
        android:textAlignment="center"
        android:textColor="@color/colorLight"
        android:textSize="@dimen/textSizeLucy"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/image1"
        android:fontFamily="@string/cursive"
        android:text="@string/come_to_join_us"
        android:textAlignment="center"
        android:textColor="@color/colorDark"
        android:textSize="@dimen/textSizeText"
        android:textStyle="bold"
        android:paddingBottom="@dimen/paddingBottomText"
        android:paddingLeft="@dimen/paddingLeftText"
        android:paddingRight="@dimen/paddingRightText"/>



    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:fontFamily="@string/fontFamily"
        android:paddingBottom="@dimen/paddingBottomAddress"
        android:text="@string/kadnarova"
        android:textAlignment="center"
        android:textColor="@color/colorDark"
        android:textSize="@dimen/textSize24"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/textView1"
        android:layout_marginTop="@dimen/marginTop33"
        android:fontFamily="@string/fontFamily"
        android:text="@string/bratislava"
        android:textAlignment="center"
        android:textColor="@color/colorDark"
        android:textSize="@dimen/textSize24"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView2"
        android:fontFamily="@string/fontFamily"
        android:text="@string/tel"
        android:textAlignment="center"
        android:textColor="@color/colorDark"
        android:textSize="@dimen/textSize21"
        android:textStyle="bold"
        android:autoLink="phone"
        android:layout_marginTop="@dimen/marginTop10"
        android:textColorLink="@color/colorDark"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView3"
        android:fontFamily="@string/fontFamily"
        android:text="@string/website"
        android:textAlignment="center"
        android:textColor="@color/colorDark"
        android:textSize="@dimen/textSize21"
        android:textStyle="bold"
        android:autoLink="web"
        android:layout_marginTop="@dimen/marginTop5"
        android:textColorLink="@color/colorDark"/>
</RelativeLayout>

